# clerum

./: .gitignore  Cargo.toml  README.md  model.clr  test.clr
src/: lib.rs  main.rs
src/clerum/: FNN.rs  RNN.rs  activation.rs  file.rs  helper.rs  loss.rs  mod.rs  optimizer.rs
