[package]
name = "clerum"
version = "0.1.0"
edition = "2021"
authors = ["Fauzan Rafingudin <55791294+FauzanFR@users.noreply.github.com>"]
description = "High-performance modular neural network library written in Rust."
license = "Apache-2.0"
repository = "https://github.com/fauzanrafi/clerum"
readme = "README.md"
keywords = ["neural-network", "rust", "machine-learning", "fnn", "ai"]
categories = ["science", "machine-learning", "algorithms"]
homepage = "https://github.com/FauzanFR"


[dependencies]
rand = "0.9.1"
rand_chacha = "0.9.0"
rand_distr = "0.5.1"
ndarray = { version = "0.16.1", features = ["serde"] }
ndarray-stats = "0.6.0"
bincode = "1.3"
serde = { version = "1", features = ["derive"] }
rayon = "1.10"
ordered-float = "5.0.0"
TensorClerum ={ git = "https://github.com/FauzanFR/TensorClerum.git"}